--- a/app/private.ejs
+++ b/app/private.ejs
@@ -2,25 +2,101 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="/styles/private.css">
+	<link rel="stylesheet" href="/bower_components/font-awesome/css/font-awesome.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 	<div id="content" class="content" style="display:none">
 	    <div class="header">
-	        
+	       <div class="navbar-branding">
+            <a class="navbar-brand" href="#dashboard">
+                Quizz<b>It !</b>
+            </a>
+          </div>
+          <div class="navbar-right">
+              <button><i class="fa fa-sign-out" aria-hidden="true"></i></button>
+          </div>
 	    </div>
 	    <div class="body">
 	        <nav class="menu">
-	            
+	            <div class="user-wrapper">
+                    <div class="media-author"><i class="fa fa-user" aria-hidden="true"></i> John Do.</div>
+                </div>
+                
+                <ul class="nav">
+                    <li class="sidebar-label pt20">Mon espace</li>
+                    <li>
+                        <a href="#dashboard">
+                          <span class="fa fa-users"></span>
+                          <span class="sidebar-title">Mes salles</span>
+                          <span class="sidebar-title-tray">
+                            <span class="label label-xs bg-primary">New</span>
+                          </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#export">
+                          <span class="fa fa-download"></span>
+                          <span class="sidebar-title">Export de données</span>
+
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#stats">
+                          <span class="fa fa-pie-chart"></span>
+                          <span class="sidebar-title">Statistiques</span>
+                        </a>
+                    </li>
+                    <li class="sidebar-label pt20">Mon compte</li>
+                    <li>
+                        <a href="#user">
+                          <span class="fa fa-user"></span>
+                          <span class="sidebar-title">Mes données personnelles</span>
+
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#account">
+                          <span class="fa fa-credit-card"></span>
+                          <span class="sidebar-title">Ma facturation</span>
+                        </a>
+                    </li>
+                </ul>
 	        </nav>
 	        <div class="dashboard">
 	           <div class="tracker">
-	       
+                    <h2>Mon dashboard</h2>
 	           </div>
 	           <div class="content">
-	       
-	           </div>     
+	               <div class="card">
+                    <div class="card-body">
+                      <h1>lorem ipsum</h1>
+                      <a href="#room-AZER">Accéder à la salle</a>
+                    </div>
+                    <div class="card-footer">
+                      <span>
+                        <i class="fa fa-calendar" aria-hidden="true"></i> Actif du <b>01/05/2016</b> au <b>01/05/2017</b>
+                      </span>
+                    </div>
+                  </div>
+	              
+	              <div class="card">
+                    <div class="card-body">
+                      <i class="fa fa-plus-circle"></i>
+                    </div>
+                    <div class="card-footer">
+                      <span>
+                        <a href="#new">Créer une nouvelle salle</a>
+                      </span>
+                    </div>
+                  </div>
+                  
+	           </div> 
+	           
+	          <footer id="content-footer">
+                <span class="footer-legal">© 2016 Quizz IT !</span>
+              </footer>
 	        </div>
 	    </div>
 		
