--- a/app/styles/private.scss
+++ b/app/styles/private.scss
@@ -169,6 +169,10 @@ body{
                 background: #e9e9e9;
                 flex-grow: 1;
                 
+                .card-dashed {
+                    border: 1px dashed #d9d9d9 !important;
+                }
+                
                 .card {
                     margin: 30px;
                     background-color: #ffffff;
@@ -220,5 +224,12 @@ body{
             }
             
         }
+    }
+    
+    .fade-transition {
+      transition: opacity .3s ease;
+    }
+    .fade-enter, .fade-leave {
+      opacity: 0;
     }
 }
