--- a/app/styles/user.scss
+++ b/app/styles/user.scss
@@ -74,7 +74,7 @@ html, body {
             
         }
         
-        input[type='text']{
+        input[type='text'],input[type='email']{
             width: 80%;
             font-size: 20px;
             padding: 10px;
@@ -86,7 +86,7 @@ html, body {
         height: 100%;
         
         .btn-wrapper{
-            height: 100%;
+            height: 90%;
             display: flex;
             flex-direction: column;
             
@@ -132,12 +132,15 @@ html, body {
             
         }
         
+        .divScore{
+            height: 10%;
+        }
     }
     
     .recap-wrapper{
         display: flex;
         width: 100%;
-        height: 100%;
+        height: 90%;
         align-items: center;
         justify-content: center;
         text-align: center;
