--- a/app/styles/dashboard.scss
+++ b/app/styles/dashboard.scss
@@ -248,6 +248,10 @@ html, body{
 .texteGris{
     color:grey;
 }
+
+.explication{
+    
+}
 /*
 .removed-leave {
     -webkit-animation: disapear 1s;
