Ajout lancement partie au bout de 30 secondes si tout le monde n'est pas connecté

--- a/app/dashboard.ejs
+++ b/app/dashboard.ejs
@@ -73,6 +73,10 @@
                 </div>
             </div>
             
+            <div class="infos" v-show="error === '' && affichageInfos">
+                {{infos}}
+            </div>
+            
         </div>
         
         <script>
